--- a/Microsoft.Teams.Samples.TaskModule.Web/Manifest/manifest.json
+++ b/Microsoft.Teams.Samples.TaskModule.Web/Manifest/manifest.json
@@ -1,6 +1,6 @@
 ﻿{
-  "$schema": "https://statics.teams.microsoft.com/sdk/v1.0/manifest/MicrosoftTeams.schema.json",
-  "manifestVersion": "1.0",
+  "$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.3/MicrosoftTeams.schema.json",
+  "manifestVersion": "1.3",
   "version": "1.0.0",
   "id": "5be69a48-f176-4b3a-9078-2385293cda8b",
   "packageName": "com.contoso.taskmodule",
@@ -25,7 +25,7 @@
   "accentColor": "#60A18E",
   "staticTabs": [
     {
-      "entityId": "com.contoso.taskmodule.hellotab",
+      "entityId": "com.contoso.taskmodule.task",
       "name": "Tasks!",
       "contentUrl": "https://taskmodulecsharpdemo.azurewebsites.net/tasks",
       "scopes": [
